themes on mobile nav and fixed about page mobile view

--- a/src/layout/NavMenu/SmScreenMenu/SmScreenMenu.scss
+++ b/src/layout/NavMenu/SmScreenMenu/SmScreenMenu.scss
@@ -1,155 +1,160 @@
 @media screen and (max-width: 577px) {
-    .bigMacMode {
-        display: flex;
-        justify-content: space-between;
-    }
+  .bigMacMode {
+    display: flex;
+    justify-content: space-between;
+  }
 
-    .burgerCollapsedKoanaIcon {
-        position: fixed;
-        right: 1rem;
-        margin-top: 0.4rem;
-        margin-right: 0.5rem;
-        height: 3rem;
-        display: flex;
-        animation: opacity-bigMac 1s forwards;
-    }
+  .burgerCollapsedKoanaIcon {
+    position: fixed;
+    right: 1rem;
+    margin-top: 0.4rem;
+    margin-right: 0.5rem;
+    height: 3rem;
+    display: flex;
+    animation: opacity-bigMac 1s forwards;
+  }
 
-    .burgerCollapsedKoanaIcon img {
-        height: 75%;
-        transition: all 0.2s ease-in-out;
-    }
+  .burgerCollapsedKoanaIcon img {
+    height: 75%;
+    transition: all 0.2s ease-in-out;
+  }
 
-    .burgerCollapsedKoanaIcon img:hover {
-        height: 200%;
-        /* transform: translate(0rem, 0px); */
-        cursor: pointer;
-        z-index: 1;
-    }
+  .burgerCollapsedKoanaIcon img:hover {
+    height: 200%;
+    /* transform: translate(0rem, 0px); */
+    cursor: pointer;
+    z-index: 1;
+  }
 
-    .bigMacIcon {
-        /* border: 1px solid black; */
-        position: relative;
-        z-index: 1;
-        margin-top: -3rem;
-        margin-left: 0.1rem;
-        /* background color needs to match viewport background */
-        // background-color: white;
-        width: 3rem;
-        height: 6rem;
-        display: flex;
-        flex-flow: column nowrap;
-        align-items: center;
-        justify-content: center;
-        gap: 3px;
-        animation: opacity-bigMac 2s forwards;
-    }
+  .bigMacIcon {
+    /* border: 1px solid black; */
+    position: relative;
+    z-index: 1;
+    margin-top: -3rem;
+    margin-left: 0.1rem;
+    /* background color needs to match viewport background */
+    // background-color: white;
+    width: 3rem;
+    height: 6rem;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: center;
+    gap: 3px;
+    animation: opacity-bigMac 2s forwards;
+  }
 
-    @keyframes opacity-bigMac {
-        from {
-            opacity: 0;
-        }
-        to {
-            opacity: 1;
-        }
+  @keyframes opacity-bigMac {
+    from {
+      opacity: 0;
     }
+    to {
+      opacity: 1;
+    }
+  }
 
-    .burgerSpacer {
-        /* border: 1px solid black; */
-        height: 50%;
-    }
+  .burgerSpacer {
+    /* border: 1px solid black; */
+    height: 50%;
+  }
 
-    .burger {
-        width: 50%;
-        height: 1px;
-        border: 1px solid rgb(152, 152, 152);
-        // color: rgb(209, 209, 209);
-        transition: all 0.25s ease-in-out;
-        z-index: 1;
-    }
+  .burger {
+    width: 50%;
+    height: 1px;
+    border: 1px solid rgb(152, 152, 152);
+    // color: rgb(209, 209, 209);
+    transition: all 0.25s ease-in-out;
+    z-index: 1;
+  }
 
-    .burgerExpand {
-        height: 1.45rem;
-        border: 1px solid rgb(153, 150, 0);
-        background-color: rgba(0, 0, 0, 0);
-        border-radius: 50%;
-        transition: all 0.25s ease-in-out;
-    }
+  .burgerExpand {
+    height: 1.45rem;
+    border: 1px solid rgb(153, 150, 0);
+    background-color: rgba(0, 0, 0, 0);
+    border-radius: 50%;
+    transition: all 0.25s ease-in-out;
+  }
 
-    .burgerExpand:hover {
-        background-color: rgb(254, 251, 0);
-        border: none;
-    }
+  .burgerExpand:hover {
+    background-color: rgb(254, 251, 0);
+    border: none;
+  }
 
-    .burgerFade {
-        border: none;
-        background-color: rgba(0, 0, 0, 0);
-        transition: all 0.05s ease-in-out;
-    }
+  .burgerFade {
+    border: none;
+    background-color: rgba(0, 0, 0, 0);
+    transition: all 0.05s ease-in-out;
+  }
 
-    .burgerNavItems {
-        /* border:1px solid black; */
-        margin-left: 0.1rem;
-        display: flex;
-        flex-flow: column nowrap;
-        width: 3rem;
-        justify-content: center;
-        align-items: center;
-        gap: 1rem;
-        opacity: 1;
-        transition: opacity 1s, transform 0.4s ease-in-out;
-        position: absolute;
-        color: rgb(66, 66, 66);
-    }
+  .burgerNavItems {
+    /* border:1px solid black; */
+    margin-left: 0.1rem;
+    display: flex;
+    flex-flow: column nowrap;
+    width: 3rem;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    opacity: 1;
+    transition: opacity 1s, transform 0.4s ease-in-out;
+    position: absolute;
+  }
+  .darkTheme {
+    color: rgb(255, 255, 255);
+  }
+  .lightTheme {
+    color: rgb(66, 66, 66);
+  }
 
-    .burgerNavItemsHide {
-        transform: translate(0px, -14rem);
-        opacity: 0;
-        transition: opacity 0.5s, transform 0.5s ease-in-out;
-    }
+  .burgerNavItemsHide {
+    transform: translate(0px, -14rem);
+    opacity: 0;
+    transition: opacity 0.5s, transform 0.5s ease-in-out;
+  }
 
-    .koanaIcon {
-        display: flex;
-        justify-content: center;
-        padding-top: 1rem;
-    }
+  .koanaIcon {
+    display: flex;
+    justify-content: center;
+    padding-top: 1rem;
+  }
 
-    .koanaIcon img {
-        width: 75%;
-        transition: all 0.2s ease-in-out;
-    }
+  .koanaIcon img {
+    width: 75%;
+    transition: all 0.2s ease-in-out;
+  }
 
-    .koanaIcon img:hover {
-        margin-top: -0.3rem;
-        width: 85%;
-        cursor: pointer;
-        transition: all 0.2s ease-in-out;
-    }
+  .koanaIcon img:hover {
+    margin-top: -0.3rem;
+    width: 85%;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+  }
 
-    .tradNavItems {
-        cursor: pointer;
-        letter-spacing: 0.2rem;
-        padding-left: 0.3rem;
-        font-size: 0.65rem;
-        text-align: right;
-    }
+  .tradNavItems {
+    cursor: pointer;
+    letter-spacing: 0.2rem;
+    padding-left: 0.3rem;
+    font-size: 0.65rem;
+    text-align: right;
+  }
 
-    .tradNavItems:hover {
-        font-weight: bold;
-    }
+  .tradNavItems:hover {
+    font-weight: bold;
+  }
 }
 
 @media screen and (min-width: 577px) {
-    .bigMacIcon,
-    .burgerSpacer,
-    .burger .burgerExpand,
-    .burgerFade,
-    .burgerNavItems,
-    .burgerNavItemsHide,
-    .koanaIcon,
-    .koanaIcon img,
-    .tradNavItems,
-    .burgerSpacer,
-    .burgerCollapsedKoanaIcon {
-        display: none;
-    }
+  .bigMacIcon,
+  .burgerSpacer,
+  .burger .burgerExpand,
+  .burgerFade,
+  .burgerNavItems,
+  .burgerNavItemsHide,
+  .koanaIcon,
+  .koanaIcon img,
+  .tradNavItems,
+  .burgerSpacer,
+  .burgerCollapsedKoanaIcon {
+    display: none;
+  }
 }
