--- a/src/pages/AboutPage/aboutPage.css
+++ b/src/pages/AboutPage/aboutPage.css
@@ -1,82 +1,91 @@
 .videoTextContainer {
-    background: black;
-    display: flex;
-    width: 100%;
-    /* border: 1px solid red; */
-    justify-content: space-between;
-    gap: 1rem;
+  background: black;
+  display: flex;
+  width: 100%;
+  /* border: 1px solid red; */
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+.videoContainer {
+  height: 100%;
 }
 
 video {
-    position: fixed;
-    width: 20rem;
-    height: 100vh;
-    object-fit: cover;
-    animation: fadeIn 1s;
-    animation-fill-mode: forwards;
-    animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+  position: fixed;
+  width: 20rem;
+  height: 100vh;
+  object-fit: cover;
+  animation: fadeIn 1s;
+  animation-fill-mode: forwards;
+  animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 @keyframes fadeIn {
-    0% {
-        opacity: 0;
-        left: -20rem;
-    }
-    100% {
-        opacity: 0.75;
-        left: 0rem;
-    }
+  0% {
+    opacity: 0;
+    left: -20rem;
+  }
+  100% {
+    opacity: 0.75;
+    left: 0rem;
+  }
 }
 
 .textContent {
-    position: relative;
-    margin-top: 3.5rem;
-    padding-left: 20rem;
-    color: white;
-    text-transform: uppercase;
-    text-align: justify;
-    letter-spacing: 0.2rem;
-    font-size: 1.25rem;
-    line-height: 2.5rem;
+  position: relative;
+  margin-top: 3.5rem;
+  padding-left: 20rem;
+  color: white;
+  text-transform: uppercase;
+  text-align: justify;
+  letter-spacing: 0.2rem;
+  font-size: 1.25rem;
+  line-height: 2.5rem;
 }
 
 @media only screen and (max-width: 600px) {
-    .videoTextContainer {
-        background-color: black;
-    }
+  .videoTextContainer {
+    background-color: black;
+    flex-direction: column;
+    height: 100vh;
+  }
 
-    video {
-        width: 100%;
-        height: 27rem;
-    }
+  video {
+    width: 100%;
+    height: 50%;
+  }
+  .videoContainer {
+    height: 50%;
+  }
 
-    .textContent {
-        position: fixed;
-        margin-top: 27rem;
-        padding-left: 0;
-        background-color: black;
-        color: white;
-        text-transform: uppercase;
-        letter-spacing: 0.2rem;
-        font-size: 1.25rem;
-        line-height: 2.5rem;
-        height: 50%;
-        overflow-y: scroll;
-    }
-    .textContent::-webkit-scrollbar {
-        width: 1rem;
-    }
+  .textContent {
+    position: relative;
+    margin-top: 0rem;
+    padding-left: 0;
+    background-color: black;
+    color: white;
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
+    font-size: 1.25rem;
+    line-height: 2.5rem;
+    height: 50%;
+    overflow-y: scroll;
+  }
+  .textContent::-webkit-scrollbar {
+    width: 1rem;
+  }
 
-    .textContent::-webkit-scrollbar-thumb {
-        background-color: rgba(254, 251, 4, 1);
-        border-top-left-radius: 5px;
-        border-bottom-left-radius: 5px;
-        transition: all 0.3s ease;
-    }
+  .textContent::-webkit-scrollbar-thumb {
+    background-color: rgba(254, 251, 4, 1);
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    transition: all 0.3s ease;
+  }
 
-    /* Works on Firefox */
-    .cartScrollWrapper {
-        scrollbar-width: thick;
-        scrollbar-color: rgba(254, 251, 4, 1) rgba(0, 0, 0, 0);
-    }
+  /* Works on Firefox */
+  .cartScrollWrapper {
+    scrollbar-width: thick;
+    scrollbar-color: rgba(254, 251, 4, 1) rgba(0, 0, 0, 0);
+  }
 }
