--- a/src/pages/FeaturePage/styles/Hero.module.scss
+++ b/src/pages/FeaturePage/styles/Hero.module.scss
@@ -2,7 +2,6 @@
 
 .viewport {
   letter-spacing: 0.5rem;
-  text-transform: uppercase;
   width: 100%;
 }
 
