--- a/src/pages/FeaturePage/styles/Location.module.scss
+++ b/src/pages/FeaturePage/styles/Location.module.scss
@@ -7,9 +7,11 @@
   width: 100%;
   height: 100%;
   min-height: 30em;
-  margin-top: 2rem;
+  padding-top: 2rem;
+  background-color: black;
+  color: white;
   @media (min-width: 881px) {
-    margin-top: 0rem;
+    padding-top: 0rem;
   }
 }
 .mapContainer,
@@ -54,11 +56,13 @@
   }
 }
 
-.title {
+.title,
+.jumboTitle {
+  letter-spacing: 0.25em;
+  text-transform: uppercase;
 }
 .jumboTitle {
   font-size: 2em;
-  letter-spacing: 0.1em;
 }
 
 .message {
@@ -77,19 +81,20 @@
     display: flex;
     align-items: center;
     text-decoration: none;
-    color: black;
+    color: white;
     gap: 0.5em;
   }
 }
 
 .circleBtn {
-  border: 1px solid black;
+  border: 1px solid white;
   padding: 0.25em;
   border-radius: 100%;
 }
 .submit {
   width: 10em;
-  border: 2px solid black;
+  border: 2px solid white;
+  color: white;
   padding: 0.25em;
   font-weight: bold;
   background-color: transparent;
